add vertical main navigation from the first case

--- a/cases/1/index.html
+++ b/cases/1/index.html
@@ -9,6 +9,7 @@
         <ul>
             <li><a href="horizontal-main-nav">Основное горизонтальное меню</a></li>
             <li><a href="extended-footer">Расширенный футер</a></li>
+            <li><a href="vertical-main-nav">Основная навигация: вертикальное меню</a></li>
         </ul>
     </nav>
 </body>
