add content navigation from the first case

--- a/cases/1/index.html
+++ b/cases/1/index.html
@@ -11,6 +11,7 @@
             <li><a href="extended-footer">Расширенный футер</a></li>
             <li><a href="vertical-main-nav">Основная навигация: вертикальное меню</a></li>
             <li><a href="landing-nav">Навигация лендинга</a></li>
+            <li><a href="content-navigation">Навигация отдельного материала</a></li>
         </ul>
     </nav>
 </body>
